force-app/main/default/objects/FuruAgent_Knowledge__c/FuruAgent_Knowledge__c.object-meta.xml
<CustomObject>
    <label>furuAgent Knowledge</label>
    <pluralLabel>furuAgent Knowledge</pluralLabel>
    <nameField>
        <label>Rule ID</label>
        <type>AutoNumber</type>
        <displayFormat>FKB-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Self-learned validation rules captured from runtime DML failures. Populated automatically as reps encounter validation errors; translated to plain English by AI for proactive guidance.</description>
</CustomObject>