force-app/main/default/objects/FuruAgent_Knowledge__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <label>Raw Error Message</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>The original Salesforce DML exception message captured at runtime.</description>
</CustomField>