force-app/main/default/objects/FuruAgent_Knowledge__c/fields/Last_Cached_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Cached_At__c</fullName>
    <label>Last Cached At</label>
    <type>DateTime</type>
    <description>Timestamp of the last schema metadata refresh written by FlashBarSchemaCacheService. Records with Target_sObject__c starting with __CACHE__: use this for TTL (24-hour) decisions.</description>
</CustomField>