force-app/main/default/objects/FuruAgent_Knowledge__c/fields/Occurrences__c.field-meta.xml
<CustomField>
    <fullName>Occurrences__c</fullName>
    <label>Occurrences</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>1</defaultValue>
    <description>Number of times this validation error has been encountered. Higher occurrences means higher priority in pre-DML warnings.</description>
</CustomField>