force-app/main/default/objects/FuruAgent_Knowledge__c/fields/Plain_English_Rule__c.field-meta.xml
<CustomField>
    <fullName>Plain_English_Rule__c</fullName>
    <label>Plain English Rule</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>AI-translated plain language explanation of the validation rule. Shown as a proactive warning to users before they attempt a similar action.</description>
</CustomField>