force-app/main/default/objects/FuruAgent_Knowledge__c/fields/Schema_JSON__c.field-meta.xml
<CustomField>
    <fullName>Schema_JSON__c</fullName>
    <label>Schema JSON</label>
    <type>LongTextArea</type>
    <length>131072</length>
    <description>Serialized JSON of field metadata for a Salesforce sObject. Populated by FlashBarSchemaCacheService as a 24-hour cache to avoid repeated Schema.getGlobalDescribe() calls on every processIntent request.</description>
</CustomField>