force-app/main/default/objects/FuruAgent_Knowledge__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <description>Approval status for this semantic rule. Pending = awaiting admin review. Approved = active. Rejected = discarded. Disabled = temporarily inactive.</description>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>true</default><label>Pending</label></value>
            <value><fullName>Approved</fullName><default>false</default><label>Approved</label></value>
            <value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value>
            <value><fullName>Disabled</fullName><default>false</default><label>Disabled</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>