force-app/main/default/objects/FuruAgent_Knowledge__c/fields/Summary_Fields_JSON__c.field-meta.xml
<CustomField>
    <fullName>Summary_Fields_JSON__c</fullName>
    <label>Summary Fields JSON</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Serialized JSON array of SummaryField objects defining which fields appear in the FlashBar record summary card. Keyed by Target_sObject__c = '__SUMMARY__:ObjectApiName'. Populated by FlashBarSummaryService with 24-hour TTL.</description>
</CustomField>