force-app/main/default/objects/FuruAgent_Knowledge__c/fields/Target_sObject__c.field-meta.xml
<CustomField>
    <fullName>Target_sObject__c</fullName>
    <label>Target sObject</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <description>API name of the Salesforce object this rule applies to (e.g. Opportunity, Lead).</description>
</CustomField>