force-app/main/default/objects/FuruAgent_Knowledge__c/fields/Trigger_Field__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Field__c</fullName>
    <label>Trigger Field(s)</label>
    <type>Text</type>
    <length>255</length>
    <description>Comma-separated API names of the fields involved when this rule was triggered (up to 3).</description>
</CustomField>